...
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                	android:textDirection="locale"
                	android:textAlignment="gravity"
                    android:id="@+id/collector_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@{collector.name}"
                    android:textAppearance="?attr/textAppearanceHeadline6"
                    android:textStyle="bold"
                    android:layout_marginEnd="8dp"/>


                <TextView
                	android:textDirection="locale"
                	android:textAlignment="gravity"
                    android:id="@+id/collector_telephone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@{collector.telephone}"
                    android:textAppearance="?attr/textAppearanceHeadline6"
                    android:layout_marginEnd="8dp"
                     />
                <TextView
                	android:textDirection="locale"
                	android:textAlignment="gravity"
                    android:id="@+id/collector_email"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="@{collector.email}"
                    android:textAppearance="?attr/textAppearanceHeadline6"
                     />
...
