...
        tools:layout="@layout/album_add_comment_fragment" >
        <action
            android:id="@+id/action_albumAddCommentFragment_to_albumDetailFragment"
            app:destination="@id/albumDetailFragment" />
    </fragment>
    <fragment
        android:id="@+id/musicianFragment"
        android:name="com.example.vinyls_equipo_16.ui.MusicianFragment"
        android:label="@string/artistas_title"
        tools:layout="@layout/musician_fragment" >
        <action
            android:id="@+id/action_musicianFragment_to_musicianDetailFragment"
            app:destination="@id/musicianDetailFragment" />
    </fragment>
    <fragment
        android:id="@+id/musicianDetailFragment"
        android:name="com.example.vinyls_equipo_16.ui.MusicianDetailFragment"
        android:label="@string/artistas_title"
        tools:layout="@layout/musician_detail_fragment" >
...
        tools:layout="@layout/musician_add_album_fragment" >
        <action
            android:id="@+id/action_musicianAddAlbumFragment_to_musicianDetailFragment"
            app:destination="@id/musicianDetailFragment" />
    </fragment>
    <fragment
        android:id="@+id/collectorFragment"
        android:name="com.example.vinyls_equipo_16.ui.CollectorFragment"
        android:label="@string/collector_title"
        tools:layout="@layout/collector_fragment" >
        <action
            android:id="@+id/action_collectorFragment_to_collectorDetailFragment"
            app:destination="@id/collectorDetailFragment" />
    </fragment>
    <fragment
        android:id="@+id/collectorDetailFragment"
        android:name="com.example.vinyls_equipo_16.ui.CollectorDetailFragment"
        android:label="@string/collector_detail_title"
        tools:layout="@layout/collector_detail_fragment" >
        <argument
            android:name="collectorId"
            app:argType="integer" />
        <action
            android:id="@+id/action_collectorDetailFragment_to_collectorAddAlbumFragment"
            app:destination="@id/collectorAddAlbumFragment" />
    </fragment>
    <fragment
        android:id="@+id/collectorAddAlbumFragment"
        android:name="com.example.vinyls_equipo_16.ui.CollectorAddAlbumFragment"
        android:label="Asociar Álbum a Coleccionista"
        tools:layout="@layout/collector_add_album_fragment" >
        <action
            android:id="@+id/action_collectorAddAlbumFragment_to_collectorDetailFragment"
            app:destination="@id/collectorDetailFragment" />
    </fragment>
    <fragment
        android:id="@+id/prizeFragment"
        android:name="com.example.vinyls_equipo_16.ui.PrizeFragment"
        android:label="@string/title_prizes"
        tools:layout="@layout/prize_fragment" >
        <action
            android:id="@+id/action_prizeFragment_to_prizeNewFragment"
            app:destination="@id/prizeNewFragment" />
    </fragment>
    <fragment
        android:id="@+id/prizeNewFragment"
        android:name="com.example.vinyls_equipo_16.ui.PrizeNewFragment"
        android:label="Crear Premio"
        tools:layout="@layout/prize_new_fragment" >
...
