...
            android:id="@+id/label_comment"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/collector_add_price"
            style="@style/labelTextNew" />
        <EditText
            android:id="@+id/priceAlbum"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/input_background"
            android:inputType="number"
            android:hint="@string/collector_add_price_hint"/>
...
            android:layout_weight="1"
            android:background="@drawable/input_background"/>

    </LinearLayout>

    <Button
        android:id="@+id/btnCreate"
        style="@style/ButtonRounded"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:enabled="false"
        android:text="@string/save" />
...
