...

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:scaleType="fitCenter"
                android:id="@+id/musician_image"
                android:contentDescription="@string/musician_item_content_descriptor" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="16dp">

                <TextView
                	android:textDirection="locale"
                	android:textAlignment="gravity"
                    android:id="@+id/musician_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{musician.name}"
                    android:textAppearance="?attr/textAppearanceHeadline6"
                    android:textStyle="bold" />

...
