<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.MusicianFragment"
    android:layout_marginStart="16dp"
    android:layout_marginEnd="16dp">

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipeRefreshLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/musiciansRv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:listitem="@layout/musician_item"/>
</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
</FrameLayout>